Enhance pizza display with quantity selection and button

--- a/index.html
+++ b/index.html
@@ -269,7 +269,16 @@
       <img src="${pizza.image}" alt="${pizza.name}" />
       <h2>${pizza.name}</h2>
       <p>${pizza.desc}</p>
-      <p><strong>$${pizza.price.toFixed(2)}</strong></
+      tile.innerHTML = `
+  <img src="${pizza.image}" alt="${pizza.name}" />
+  <h2>${pizza.name}</h2>
+  <p>${pizza.desc}</p>
+  <p><strong>$${pizza.price.toFixed(2)}</strong></p>
+  <select id="${qtyId}">
+    ${[...Array(10)].map((_, i) => `<option value="${i+1}">Qty: ${i+1}</option>`).join('')}
+  </select>
+  <button onclick="addToCart('${pizza.name}', ${pizza.price}, '${qtyId}')">Add to Cart</button>
+`;
     </script>
 </body>
 </html>
