--- a/index.html
+++ b/index.html
@@ -242,7 +242,103 @@
     }
 
     const pizzas = [
-      // ✅ Your full pizza array goes here — already included above
+  {
+    name: "Double Cheese Pizza",
+    price: 12.00,
+    desc: "The ultimate cheese-lover's pizza, topped with cheddar and mozzarella.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/DoubleCheese.webp"
+  },
+  {
+    name: "Pepperoni Pizza",
+    price: 12.00,
+    desc: "Covered from edge to edge with pepperoni and mozzarella cheese.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/Pepperoni.webp"
+  },
+  {
+    name: "Sausage Pizza",
+    price: 12.00,
+    desc: "Made with savory sausage and mozzarella cheese.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/Sausage.webp"
+  },
+  {
+    name: "Sausage and Pepperoni Pizza",
+    price: 13.00,
+    desc: "Featuring sausage, pepperoni and mozzarella cheese.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/Sausage%26Pepperoni.webp"
+  },
+  {
+    name: "Sausage and Mushroom Pizza",
+    price: 13.00,
+    desc: "Loaded up with sausage, mushrooms and mozzarella cheese.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/Sausage%26Mushroom.webp"
+  },
+  {
+    name: "Inferno",
+    price: 13.00,
+    desc: "Spicy combo of sausage, pepperoni, mozzarella and jalapeños.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/Inferno.webp"
+  },
+  {
+    name: "Deluxe Combo",
+    price: 14.00,
+    desc: "Sausage, pepperoni, onions, mushrooms, green peppers, and mozzarella cheese.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/DeluxeCombination.webp"
+  },
+  {
+    name: "Six Pack",
+    price: 14.00,
+    desc: "Sausage, pepperoni, Canadian bacon, bacon, cheddar and mozzarella.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/SixPack.webp"
+  },
+  {
+    name: "BCB",
+    price: 14.00,
+    desc: "Bacon Cheese Burger pizza topped with beef, cheese, and bacon.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/BCB.webp"
+  },
+  {
+    name: "Chicken Alfredo Pizza",
+    price: 14.00,
+    desc: "Garlic chicken, creamy alfredo sauce, and mozzarella on seasoned crust.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/ChickenAlfredo.webp"
+  },
+  {
+    name: "Breakfast Pizza",
+    price: 14.00,
+    desc: "Sausage, bacon, scrambled eggs, green onions, cheddar, mozzarella, and country gravy.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/Breakfast.webp"
+  },
+  {
+    name: "El Jefe",
+    price: 14.00,
+    desc: "Chorizo, jalapeños, black olives, green onions, mozzarella, and cheddar.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/ElJefe.webp"
+  },
+  {
+    name: "Italian Beef",
+    price: 14.00,
+    desc: "Sliced beef, giardiniera, sweety drop peppers, mozzarella and provolone.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/ItalianBeef.webp"
+  },
+  {
+    name: "Cauliflower Crust Sausage & Pepperoni",
+    price: 14.75,
+    desc: "Gluten-free crust topped with sausage, pepperoni, and mozzarella.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/CauliflowerCrustSausage%26Pepperoni.webp"
+  },
+  {
+    name: "Cauliflower Crust Margherita",
+    price: 14.75,
+    desc: "Tomato, basil, garlic, and sliced mozzarella on gluten-free crust.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/CauliflowerCrustMargherita.webp"
+  },
+  {
+    name: "Cauliflower Crust Chicken Alfredo",
+    price: 14.75,
+    desc: "White chicken, alfredo sauce, and mozzarella on gluten-free crust.",
+    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/CauliflowerCrustChickenAlfredo.webp"
+  }
+];
     ];
 
     const tileContainer = document.getElementById("pizzaTiles");
