--- a/index.html
+++ b/index.html
@@ -144,9 +144,14 @@
   <h3>Send Payment via Venmo</h3>
   <p>Please send your total to <strong>@WaconiaWildcats_B2Gold</strong> and include your name in the notes.</p>
   <p id="venmoAmount" style="font-weight:bold; margin:12px 0;"></p>
+
+  <!-- Venmo Profile Link -->
+  <a href="https://venmo.com/WaconiaWildcats_B2Gold" target="_blank" style="display:inline-block; margin:12px 0; color:#3d95ce; font-weight:bold;">Open Venmo Profile</a>
+
   <button onclick="submitOrder('venmo')" style="padding:10px 16px; background:#3d95ce; color:white; border:none; border-radius:6px;">I’ve Paid — Submit My Order</button>
   <button onclick="closeVenmoModal()" style="margin-top:8px; padding:8px 12px;">Cancel</button>
 </div>
+  
   <!-- Script Block -->
   <script>
     const cart = [];
