--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="Waconia Hockey B1 Gold Pizza Fundraiser" />
   <meta property="og:description" content="Support the team and enjoy delicious pizza! Order now for the 2025/2026 season." />
   <meta property="og:image" content="https://ssprodst.blob.core.windows.net/logos/357/57fe989a-53fb-4800-8a8a-43c5b406ec0d-04-29-2025-02-33-35-813.png" />
-  <meta property="og:url" content="https://your-fundraiser-page-url.com" />
+  <meta property="og:url" content="https://neudof.github.io/WaconiaSquirtB2GoldFundraiser/" />
   <meta property="og:type" content="website" />
   <style>
     body {
