--- a/index.html
+++ b/index.html
@@ -244,44 +244,35 @@ function closeVenmoModal() {
     alert(`Copied ${handle} to clipboard`);
   });
 }
-    function submitOrder(paymentMethod) {
-      const name = document.getElementById("name").value.trim();
-      const email = document.getElementById("email").value.trim();
-      const phone = document.getElementById("phone").value.trim();
-      const address = document.getElementById("address").value.trim();
+function submitOrder(paymentMethod) {
+  const name = document.getElementById("name").value.trim();
+  const email = document.getElementById("email").value.trim();
+  const phone = document.getElementById("phone").value.trim();
+  const address = document.getElementById("address").value.trim();
 
-      if (!name || !email || !phone || !address) {
-        alert("Please fill out all fields.");
-        return;
-      }
+  if (!name || !email || !phone || !address) {
+    alert("Please fill out all fields.");
+    return;
+  }
 
-      const order = {
-        name,
-        email,
-        phone,
-        address,
-        payment: paymentMethod,
-        items: cart
-      };
+  const order = {
+    name,
+    email,
+    phone,
+    address,
+    payment: paymentMethod,
+    items: cart
+  };
 
-      fetch("https://script.google.com/macros/s/AKfycbxwRSjJe-xgTWLmEvhs7RjJMh80C4nxqIgq8232kqJ_Dw13fUUrtSwz04kWAf7WBfvg/exec", {
-        method: "POST",
-        body: JSON.stringify(order),
-        headers: { "Content-Type": "application/json" }
-      })
-      .then(res => res.text())
-.then(msg => {
+  // Submit via hidden form
+  document.getElementById("orderData").value = JSON.stringify(order);
+  document.getElementById("orderForm").submit();
+
   alert("✅ Order submitted!\n\nThank you for supporting Waconia Hockey B2 Gold!\nWe’ll be in touch with delivery or pickup details.");
   cart.length = 0;
   updateCartSummary();
-  closeVenmoModal(); // Optional: hide modal after submission
-})
-      .catch(err => {
-        console.error("Error submitting order:", err);
-        alert("There was a problem submitting your order.");
-      });
-    }
-
+  closeVenmoModal();
+}
     const pizzas = [
   {
     name: "Double Cheese Pizza",
@@ -398,5 +389,9 @@ function closeVenmoModal() {
       tileContainer.appendChild(tile);
     });
   </script>
+  <!-- Hidden form for order submission -->
+<form id="orderForm" action="https://script.google.com/macros/s/AKfycbxwRSjJe-xgTWLmEvhs7RjJMh80C4nxqIgq8232kqJ_Dw13fUUrtSwz04kWAf7WBfvg/exec" method="POST" style="display:none;">
+  <input type="hidden" name="order" id="orderData" />
+</form>
 </body>
 </html>
