--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@ function submitOrder(paymentMethod) {
 
   fetch("https://script.google.com/macros/s/AKfycbxwRSjJe-xgTWLmEvhs7RjJMh80C4nxqIgq8232kqJ_Dw13fUUrtSwz04kWAf7WBfvg/exec", {
     method: "POST",
-    body: JSON.stringify({ order: JSON.stringify(order) }),
+    body: `order=${encodeURIComponent(JSON.stringify(order))}`,
     headers: { "Content-Type": "application/x-www-form-urlencoded" }
-  })
+})
   .then(res => res.text())
   .then(msg => {
     if (msg.includes("Order received")) {
