--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </div>
     </form>
   </div>
-<!-- Venmo Payment Modal -->
+<!-- Venmo Payment Modal (inside cartSummary only) -->
 <div id="venmoModal" style="display:none; position:fixed; top:20%; left:50%; transform:translateX(-50%); background:#fff; padding:24px; border-radius:8px; box-shadow:0 2px 10px rgba(0,0,0,0.2); z-index:1000; max-width:400px; text-align:center;">
   <h3>Send Payment via Venmo</h3>
   <p>
@@ -169,13 +169,6 @@
   <button onclick="copyVenmoHandle()" style="margin-bottom:12px; padding:6px 12px; font-size:14px;">Copy Handle</button>
   <p id="venmoAmount" style="font-weight:bold; margin:12px 0;"></p>
 
-  <a href="https://venmo.com/WaconiaWildcats_B2Gold" target="_blank" style="display:inline-block; margin:12px 0; color:#3d95ce; font-weight:bold;">Open Venmo Profile</a>
-
-  <button onclick="submitOrder('venmo')" style="padding:10px 16px; background:#3d95ce; color:white; border:none; border-radius:6px;">I’ve Paid — Submit My Order</button>
-  <button onclick="closeVenmoModal()" style="margin-top:8px; padding:8px 12px;">Cancel</button>
-</div>
-
-  <!-- Venmo Profile Link -->
   <a href="https://venmo.com/WaconiaWildcats_B2Gold" target="_blank" style="display:inline-block; margin:12px 0; color:#3d95ce; font-weight:bold;">Open Venmo Profile</a>
 
   <button onclick="submitOrder('venmo')" style="padding:10px 16px; background:#3d95ce; color:white; border:none; border-radius:6px;">I’ve Paid — Submit My Order</button>
