--- a/index.html
+++ b/index.html
@@ -260,10 +260,15 @@ function submitOrder(paymentMethod) {
   const phone = document.getElementById("phone").value.trim();
   const address = document.getElementById("address").value.trim();
 
-  if (!name || !email || !phone || !address) {
+  if (!name || !email || !phone || !address || !player) {
     alert("Please fill out all fields.");
     return;
   }
+
+  // Show processing overlay and disable buttons
+  document.getElementById("processingOverlay").style.display = "block";
+  const buttons = document.querySelectorAll("button");
+  buttons.forEach(btn => btn.disabled = true);
 
   const order = {
     player,
@@ -279,9 +284,12 @@ function submitOrder(paymentMethod) {
     method: "POST",
     body: `order=${encodeURIComponent(JSON.stringify(order))}`,
     headers: { "Content-Type": "application/x-www-form-urlencoded" }
-})
+  })
   .then(res => res.text())
   .then(msg => {
+    document.getElementById("processingOverlay").style.display = "none";
+    buttons.forEach(btn => btn.disabled = false);
+
     if (msg.includes("Order received")) {
       alert("✅ Order submitted!\n\nThank you for supporting Waconia Hockey B2 Gold!\nWe’ll be in touch with delivery or pickup details.");
       cart.length = 0;
@@ -292,6 +300,8 @@ function submitOrder(paymentMethod) {
     }
   })
   .catch(err => {
+    document.getElementById("processingOverlay").style.display = "none";
+    buttons.forEach(btn => btn.disabled = false);
     console.error("Error submitting order:", err);
     alert("There was a problem submitting your order.");
   });
@@ -414,5 +424,19 @@ window.onload = function() {
   });
 };
   </script>
+  <!-- Processing Overlay -->
+<div id="processingOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0.8); z-index:2000; text-align:center; padding-top:20%;">
+  <div style="display:inline-block; text-align:center;">
+    <div class="spinner" style="margin-bottom:16px; width:40px; height:40px; border:4px solid #ccc; border-top:4px solid #3d95ce; border-radius:50%; animation: spin 1s linear infinite;"></div>
+    <p style="font-size:18px; color:#333;">Submitting your order...</p>
+  </div>
+</div>
+
+<style>
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+</style>
 </body>
 </html>
