Fix og:description date format in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Waconia Hockey B2 Gold Pizza Fundraiser</title>
   <meta property="og:title" content="Waconia Hockey B2 Gold Pizza Fundraiser" />
-  <meta property="og:description" content="Support the teams 25-26 season and enjoy some delicious pizza! Orders must be placed by Nov 18th and Orders will be available Dec 3rd." />
+  <meta property="og:description" content="Support the teams 25/26 season and enjoy some delicious pizza! Orders must be placed by Nov 18th and Orders will be available Dec 3rd." />
   <meta property="og:image" content="https://ssprodst.blob.core.windows.net/logos/357/57fe989a-53fb-4800-8a8a-43c5b406ec0d-04-29-2025-02-33-35-813.png" />
   <meta property="og:url" content="https://neudof.github.io/WaconiaSquirtB2GoldFundraiser/" />
   <meta property="og:type" content="website" />
